--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -179,7 +179,7 @@
 \newcommand{\pval}{v} % parameter valuation
 % \newcommand{\resets}{R}
 \newcommand{\steps}{ {\rightarrow} }
-\newcommand{\stopwatches}{S}
+\newcommand{\stopwatches}{\mathit{SW}}
 \newcommand{\tuple}[1]{\langle#1\rangle}
 \newcommand{\unobs}{\ensuremath{\epsilon}}
 \newcommand{\Var}{\mathit{Var}} % set of variables
